Update 'zgr2vt5gt-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a7bbf23e9b.tmzl.p3.openshiftapps.com/rhtap/rhtap-qe:984249cacbd0852210e18937a8e47d248208c765@sha256:698cf08266d831fce86e5c3e93bacc0f64e507007df2fe54fbcc68bda983bc79

--- a/components/zgr2vt5gt-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/zgr2vt5gt-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: zgr2vt5gt-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a7bbf23e9b.tmzl.p3.openshiftapps.com/rhtap/rhtap-qe:984249cacbd0852210e18937a8e47d248208c765@sha256:698cf08266d831fce86e5c3e93bacc0f64e507007df2fe54fbcc68bda983bc79
+          name: container-image
